--- a/image/conf/application.conf
+++ b/image/conf/application.conf
@@ -33,6 +33,8 @@ play {
                     parallelism-factor = 12.0
                     parallelism-max = 24
                 }
+                throughput-deadline-time = 2000ms
+                throughput = 100
             }
 
         }
