--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -10,6 +10,9 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<url>http://maven.apache.org</url>
 	<properties>
 	   <cucumber.version>1.1.3</cucumber.version>
+       <http_proxy></http_proxy>
+       <host></host>
+       <driver></driver>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <tags>--tags ~@nothing</tags>
 	</properties>
@@ -87,6 +90,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14.1</version>
 				<configuration>
 					<systemProperties>
 	                    <property>
