--- a/common/conf/env/PROD.properties
+++ b/common/conf/env/PROD.properties
@@ -16,3 +16,4 @@ guardian.page.omnitureAccount=guardiangu-frontend,guardiangu-network
 guardian.page.googleSearchId=007466294097402385199:m2ealvuxh1i
 
 ajax.url=http://m.guardian.co.uk
+ajax.cors.origin=http://www.theguardian.com,http://m.guardian.co.uk,http://m.guardiannews.com
