--- a/common/conf/env/DEV.properties
+++ b/common/conf/env/DEV.properties
@@ -14,3 +14,8 @@ guardian.page.omnitureAccount=guardiangu-mobiledev
 guardian.page.googleSearchId=007466294097402385199:m2ealvuxh1i
 
 front.config=http://s3-eu-west-1.amazonaws.com/aws-frontend-store/CODE/config/front.json
+
+
+# uncomment to test cors locally
+#ajax.url=http://m.random.com,http://127.0.0.1:9000,http://www.random.com
+#ajax.cors.origin=http://localhost:9000
