--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ frontend-gallery.properties
 frontend-tag.properties
 frontend-section.properties
 frontend-video.properties
+frontend-applications.properties
 
 *.csv
 *.iml
