--- a/admin/conf/application.conf
+++ b/admin/conf/application.conf
@@ -4,8 +4,7 @@
 application: {
     # The secret key is used to secure cryptographics functions.
     # If you deploy your application to several instances be sure to use the same key!
-    secret: "iTTgJYOM0dEonFWTbh/7ei4@R[tSZXMH=uBO3sjS[YFf:3U5TG?ub4YHqY]CuvM8"
-
+    secret: ${APP_SECRET}
     langs: "en"
 }
 
