--- a/common/conf/env/DEV.properties
+++ b/common/conf/env/DEV.properties
@@ -25,4 +25,4 @@ admin.config.file=DEV/config/front.json
 switches.file=DEV/config/switches.properties
 stories.preview.url=http://m.gucode.com/stories/
 
-fronts.api.host=http://frontend-frontsap-1cb58typd06bp-1433204139.eu-west-1.elb.amazonaws.com
+fronts.api=http://s3-eu-west-1.amazonaws.com/aws-fronts-api/CODE
