--- a/common/conf/env/DEV.properties
+++ b/common/conf/env/DEV.properties
@@ -24,3 +24,7 @@ front.config=http://s3-eu-west-1.amazonaws.com/aws-frontend-store/CODE/config/fr
 admin.config.file=DEV/config/front.json
 switches.file=DEV/config/switches.properties
 stories.preview.url=http://m.gucode.com/stories/
+
+
+frontsApi.aws.bucket=aws-fronts-api
+frontsApi.file=CODE
