--- a/common/conf/env/CODE.properties
+++ b/common/conf/env/CODE.properties
@@ -29,3 +29,5 @@ switches.file=CODE/config/switches.properties
 stories.preview.url=http://m.gucode.com/stories/
 
 oas.siteId.host=m.gucode.co.uk
+
+fronts.api=http://s3-eu-west-1.amazonaws.com/aws-fronts-api/CODE
