--- a/common/conf/env/TEST.properties
+++ b/common/conf/env/TEST.properties
@@ -22,3 +22,5 @@ ajax.url=http://m.gutest.co.uk
 admin.config.file=TEST/config/front.json
 switches.file=TEST/config/switches.properties\
 stories.preview.url=http://m.gutest.com/stories/
+
+fronts.api=http://s3-eu-west-1.amazonaws.com/aws-fronts-api/CODE
