--- a/common/conf/env/CODE.properties
+++ b/common/conf/env/CODE.properties
@@ -30,4 +30,4 @@ stories.preview.url=http://m.gucode.com/stories/
 
 oas.siteId.host=m.gucode.co.uk
 
-fronts.api=http://s3-eu-west-1.amazonaws.com/aws-fronts-api/CODE
+frontend.store=http://s3-eu-west-1.amazonaws.com/aws-frontend-store
