--- a/common/conf/env/DEVINFRA.properties
+++ b/common/conf/env/DEVINFRA.properties
@@ -25,4 +25,4 @@ admin.config.file=DEFINFRA/config/front.json
 switches.file=DEFINFRA/config/switches.properties\
 stories.preview.url=http://m.gucode.com/stories/
 
-fronts.api=http://s3-eu-west-1.amazonaws.com/aws-fronts-api/CODE
+frontend.store=http://s3-eu-west-1.amazonaws.com/aws-frontend-store
