--- a/common/conf/env/DEV.properties
+++ b/common/conf/env/DEV.properties
@@ -26,3 +26,6 @@ switches.file=DEV/config/switches.properties
 stories.preview.url=http://m.gucode.com/stories/
 
 frontend.store=http://s3-eu-west-1.amazonaws.com/aws-frontend-store
+
+# ID
+id.url=http://localhost:9000/identity
