--- a/common/conf/env/TEST.properties
+++ b/common/conf/env/TEST.properties
@@ -24,3 +24,6 @@ switches.file=TEST/config/switches.properties\
 stories.preview.url=http://m.gutest.com/stories/
 
 frontend.store=http://s3-eu-west-1.amazonaws.com/aws-frontend-store
+
+# ID
+id.url=https://profile.theguardian.com
