--- a/common/conf/env/DEV.properties
+++ b/common/conf/env/DEV.properties
@@ -28,4 +28,4 @@ stories.preview.url=http://m.gucode.com/stories/
 frontend.store=http://s3-eu-west-1.amazonaws.com/aws-frontend-store
 
 # ID
-id.url=http://localhost:9000/identity
+id.url=https://profile.thegulocal.com
