--- a/common/conf/env/PROD.properties
+++ b/common/conf/env/PROD.properties
@@ -28,4 +28,4 @@ stories.preview.url=http://m.guardian.co.uk/stories/
 frontend.store=http://s3-eu-west-1.amazonaws.com/aws-frontend-store
 
 # ID
-id.url=https://profile.theguardian.com
+id.url=http://profile.theguardian.com
