--- a/common/conf/env/TEST.properties
+++ b/common/conf/env/TEST.properties
@@ -26,4 +26,4 @@ stories.preview.url=http://m.gutest.com/stories/
 frontend.store=http://s3-eu-west-1.amazonaws.com/aws-frontend-store
 
 # ID
-id.url=https://profile.theguardian.com
+id.url=http://profile.theguardian.com
