--- a/common/conf/env/DEVINFRA.properties
+++ b/common/conf/env/DEVINFRA.properties
@@ -27,4 +27,5 @@ switches.file=DEFINFRA/config/switches.properties\
 frontend.store=http://s3-eu-west-1.amazonaws.com/aws-frontend-store
 
 # ID
-id.url=http://localhost:9000/identity
+id.url=https://localhost:9000/identity
+id.apiRoot=https://id.no-id-api-exists-for-team-city.needs-to-be-faked
