--- a/common/conf/env/TEST.properties
+++ b/common/conf/env/TEST.properties
@@ -26,3 +26,4 @@ frontend.store=http://s3-eu-west-1.amazonaws.com/aws-frontend-store
 
 # ID
 id.url=http://profile.theguardian.com
+id.apiRoot=https://id.guardianapis.com
