--- a/common/conf/env/DEVINFRA.properties
+++ b/common/conf/env/DEVINFRA.properties
@@ -29,3 +29,4 @@ frontend.store=http://s3-eu-west-1.amazonaws.com/aws-frontend-store
 # ID
 id.url=https://localhost:9000/identity
 id.apiRoot=https://id.no-id-api-exists-for-team-city.needs-to-be-faked
+id.apiClientToken=frontend-dev-client-token
