Add sonobi.js.location to DEV CODE and PROD

--- a/common/conf/env/CODE.properties
+++ b/common/conf/env/CODE.properties
@@ -108,3 +108,6 @@ notifications.subscriptions_table=frontend-notifications
 
 #HealthCheck refresh interval (0 = no update on regular schedule)
 healthcheck.updateIntervalInSecs=5
+
+#Sonobi
+sonobi.js.location=//mtrx.go.sonobi.com/morpheus.theguardian.2919.j
