--- a/common/conf/env/DEV.properties
+++ b/common/conf/env/DEV.properties
@@ -118,3 +118,6 @@ healthcheck.updateIntervalInSecs=300
 # r2 Press (empty in dev)
 admin.r2.page.press.sqs.queue.url=
 admin.r2.page.press.takedown.sqs.queue.url=
+
+#Sonobi
+sonobi.js.location=//mtrx.go.sonobi.com/morpheus.theguardian.2919.j
