fix config paths

--- a/common/conf/env/CODE.properties
+++ b/common/conf/env/CODE.properties
@@ -110,4 +110,4 @@ notifications.subscriptions_table=frontend-notifications
 healthcheck.updateIntervalInSecs=5
 
 #Sonobi
-sonobi.js.location=//mtrx.go.sonobi.com/morpheus.theguardian.2919.j
+sonobi.js.location=//mtrx.go.sonobi.com/morpheus.theguardian.2919.js
