--- a/common/conf/env/DEV.properties
+++ b/common/conf/env/DEV.properties
@@ -120,4 +120,4 @@ admin.r2.page.press.sqs.queue.url=
 admin.r2.page.press.takedown.sqs.queue.url=
 
 #Sonobi
-sonobi.js.location=//mtrx.go.sonobi.com/morpheus.theguardian.2919.j
+sonobi.js.location=//mtrx.go.sonobi.com/morpheus.theguardian.2919.js
