switch for phone register

--- a/common/conf/env/DEV.properties
+++ b/common/conf/env/DEV.properties
@@ -22,7 +22,7 @@ ajax.cors.origin=http://m.random.com,http://127.0.0.1:9000,http://www.random.com
 #amp.host=amp.int.gnl
 
 # ID
-id.url=https://profile.thegulocal.com
+id.url=https://profile-origin.thegulocal.com
 id.apiRoot=https://idapi.thegulocal.com
 id.apiClientToken=frontend-dev-client-token
 id.webapp.url=https://id.thegulocal.com
