--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "btoa": "1.1.2",
     "check-dependencies": "^0.11.0",
     "cssnano": "^3.7.1",
+    "debug": "^2.2.0",
     "eslint": "2.4.0",
     "eslint-plugin-jasmine": "^1.5.0",
     "eslint-plugin-react": "^3.5.0",
@@ -84,23 +85,31 @@
     "lodash.takewhile": "^4.6.0",
     "megalog": "^0.1.0",
     "mkdirp": "0.5.0",
+    "module-lookup-amd": "^4.0.3",
     "moment": "2.8.3",
     "node-sass": "^3.8.0",
     "perfectionist": "^2.1.3",
     "phantom": "^2.1.8",
     "phantomjs-prebuilt": "^2.1.7",
     "pify": "^2.3.0",
+    "piuccio.madge": "^1.3.3",
     "postcss": "^5.0.21",
     "postcss-atomised": "^0.3.1",
     "postcss-pxtorem": "^3.3.1",
     "postcss-reporter": "^1.4.1",
     "require-dir": "^0.3.0",
+    "rollup": "^0.36.1",
+    "rollup-plugin-amd": "^1.1.1",
+    "rollup-plugin-buble": "^0.14.0",
+    "rollup-plugin-string": "^2.0.2",
     "sass-lint": "^1.8.2",
     "sorted-object": "^1.0.0",
     "strip-ansi": "^3.0.1",
     "svgo": "0.4.5",
     "time-grunt": "1.2.0",
+    "uglify-js": "^2.7.3",
     "webpack": "^1.13.1",
+    "write-file-promise": "^1.0.0",
     "yargs": "^6.0.0"
   },
   "optionalDependencies": {
