--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "karma-teamcity-reporter": "^1.0.0",
     "load-grunt-config": "0.17.1",
     "lodash": "^3.10.1",
+    "lodash.takewhile": "^4.6.0",
     "megalog": "^0.1.0",
     "mkdirp": "0.5.0",
     "moment": "2.8.3",
