--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-jasmine": "^1.5.0",
     "eslint-plugin-react": "^3.5.0",
     "esprima": "1.2.2",
+    "flow-remove-types": "1.0.4",
     "glob": "^7",
     "grunt": "0.4.5",
     "grunt-asset-hash": "0.1.6",
@@ -105,6 +106,7 @@
     "sass-watch": "node-sass -w ./static/src/stylesheets -o ./static/target/stylesheets --source-map=true",
     "css-watch": "gulp --cwd ./dev watch:css",
     "browser-sync": "browser-sync start --config ./dev/bs-config.js",
-    "compile-deploy-radiator": "webpack --config=static/src/deploys-radiator/webpack.config.js --progress --colors && cp static/src/deploys-radiator/app/main.css static/target/deploys-radiator"
+    "compile-deploy-radiator": "webpack --config=static/src/deploys-radiator/webpack.config.js --progress --colors && cp static/src/deploys-radiator/app/main.css static/target/deploys-radiator",
+    "detype": "flow-remove-types --out-dir static/src/javascripts static/src/flow"
   }
 }
