--- a/static/src/.eslintignore
+++ b/static/src/.eslintignore
@@ -10,6 +10,13 @@
 **/javascripts/projects/common/utils/atob.js
 **/javascripts/projects/common/utils/picturefill.js
 
+**/flow/bower_components
+**/flow/components
+**/flow/vendor
+**/flow/polyfills
+**/flow/projects/common/utils/atob.js
+**/flow/projects/common/utils/picturefill.js
+
 **/deploys-radiator/node_modules
 **/deploys-radiator/jspm_packages
 **/deploys-radiator/target
