--- a/package.json
+++ b/package.json
@@ -75,8 +75,11 @@
     "karma-script-launcher": "^1.0.0",
     "karma-spec-reporter": "0.0.26",
     "karma-teamcity-reporter": "^1.0.0",
+    "listr": "^0.6.1",
+    "listr-verbose-renderer": "^0.1.0",
     "load-grunt-config": "0.17.1",
     "lodash": "^3.10.1",
+    "lodash.flatten": "^4.4.0",
     "lodash.takewhile": "^4.6.0",
     "megalog": "^0.1.0",
     "mkdirp": "0.5.0",
@@ -95,7 +98,8 @@
     "sorted-object": "^1.0.0",
     "svgo": "0.4.5",
     "time-grunt": "1.2.0",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "yargs": "^6.0.0"
   },
   "optionalDependencies": {
     "fsevents": "*"
