--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "listr-verbose-renderer": "^0.1.0",
     "load-grunt-config": "0.17.1",
     "lodash": "^3.10.1",
+    "lodash.capitalize": "^4.2.1",
     "lodash.flatten": "^4.4.0",
     "lodash.takewhile": "^4.6.0",
     "megalog": "^0.1.0",
