--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-jasmine": "^1.5.0",
     "eslint-plugin-react": "^3.5.0",
     "esprima": "1.2.2",
+    "execa": "^0.5.0",
     "glob": "^7",
     "grunt": "0.4.5",
     "grunt-asset-hash": "0.1.6",
