--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "require-dir": "^0.3.0",
     "sass-lint": "^1.8.2",
     "sorted-object": "^1.0.0",
+    "strip-ansi": "^3.0.1",
     "svgo": "0.4.5",
     "time-grunt": "1.2.0",
     "webpack": "^1.13.1",
