Revert "Remove grunt require"

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "0.6.0",
+    "grunt-contrib-requirejs": "0.4.4",
     "grunt-contrib-uglify": "0.9.1",
     "grunt-css-metrics": "0.1.2",
     "grunt-eslint": "19.0.0",
@@ -94,7 +95,6 @@
     "postcss-pxtorem": "^3.3.1",
     "postcss-reporter": "^1.4.1",
     "require-dir": "^0.3.0",
-    "requirejs": "^2.3.2",
     "sass-lint": "^1.8.2",
     "sorted-object": "^1.0.0",
     "strip-ansi": "^3.0.1",
