--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "lodash.capitalize": "^4.2.1",
     "lodash.flatten": "^4.4.0",
     "lodash.takewhile": "^4.6.0",
+    "madge": "^1.4.3",
     "megalog": "^0.1.0",
     "mkdirp": "0.5.0",
     "module-lookup-amd": "^4.0.3",
@@ -92,7 +93,6 @@
     "phantom": "^2.1.8",
     "phantomjs-prebuilt": "^2.1.7",
     "pify": "^2.3.0",
-    "piuccio.madge": "^1.3.3",
     "postcss": "^5.0.21",
     "postcss-atomised": "^0.3.1",
     "postcss-pxtorem": "^3.3.1",
