--- a/package.json
+++ b/package.json
@@ -62,11 +62,11 @@
     "jit-grunt": "0.9.1",
     "karma": "^1.3.0",
     "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.1",
+    "karma-phantomjs-launcher": "^1.0.2",
     "karma-phantomjs-shim": "^1.4.0",
     "karma-requirejs": "^1.0.0",
     "karma-script-launcher": "^1.0.0",
-    "karma-spec-reporter": "0.0.26",
+    "karma-spec-reporter": "^0.0.26",
     "karma-teamcity-reporter": "^1.0.0",
     "listr": "^0.6.1",
     "load-grunt-config": "0.17.1",
