--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "jasmine-core": "^2.3.2",
     "jit-grunt": "0.9.1",
     "karma": "^1.3.0",
-    "karma-coverage": "0.3.1",
+    "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-phantomjs-shim": "^1.4.0",
