--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -1,5 +1,5 @@
 files:
-  include: '**/*.s+(a|c)ss'
+  include: 'static/src/stylesheets/**/*.scss'
   ignore:
     # Do not lint external files.
     - 'static/src/stylesheets/components/**/*.scss'
