--- a/static/src/javascripts/bower.json
+++ b/static/src/javascripts/bower.json
@@ -16,6 +16,9 @@
     "raven-js": "~1.1.16",
     "requirejs-text": "~2.0.12",
     "when": "3.7.3",
+    "html5shiv": "~3.7.0",
+    "JSON-js": "*",
+    "es5-shim": "~4.5.8",
     "video.js": "5.4.6",
     "videojs-playlist-audio": "guardian/videojs-playlist#v0.1.0",
     "videojs-contrib-ads": "3.1.3",
@@ -40,7 +43,8 @@
       "videojs-contrib-ads": "bower_components/videojs-contrib-ads/src/videojs.ads.js",
       "videojs-ima": "bower_components/videojs-ima/src/videojs.ima.js",
       "videojs-playlist-audio": "bower_components/videojs-playlist-audio/javascripts/videojs.playlist.js",
-      "videojs-embed" : "bower_components/videojs-embed/dist/videojs.embed.js"
+      "videojs-embed" : "bower_components/videojs-embed/dist/videojs.embed.js",
+      "JSON-js": "bower_components/JSON-js/json2.js"
     }
   }
 }
