--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-latest": "^6.16.0",
     "browser-sync": "^2.8.2",
     "btoa": "1.1.2",
+    "chalk": "^1.1.3",
     "check-dependencies": "^0.11.0",
     "cssnano": "^3.7.1",
     "eslint": "^3.8.1",
