--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "strip-ansi": "^3.0.1",
     "svgo": "0.4.5",
     "time-grunt": "1.2.0",
+    "uglify-js": "^2.7.4",
     "webpack": "^1.13.1",
     "yargs": "^6.0.0"
   },
