--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "browser-sync": "^2.8.2",
     "btoa": "1.1.2",
     "check-dependencies": "^0.11.0",
+    "cpy": "^4.0.1",
     "cssnano": "^3.7.1",
     "eslint": "^3.8.1",
     "eslint-plugin-jasmine": "^1.8.1",
@@ -29,7 +30,6 @@
     "grunt-asset-hash": "0.1.6",
     "grunt-asset-monitor": "0.2.0",
     "grunt-bytesize": "0.1.1",
-    "grunt-contrib-copy": "0.6.0",
     "grunt-contrib-uglify": "0.9.1",
     "grunt-css-metrics": "0.1.2",
     "grunt-frequency-graph": "^0.1.6",
