--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "grunt-frequency-graph": "^0.1.6",
     "grunt-postcss": "^0.8.0",
     "grunt-px-to-rem": "0.4.0",
-    "grunt-svgmin": "^4.0.0",
     "grunt-text-replace": "0.3.12",
     "grunt-webfontjson": "0.0.4",
     "gulp": "^3.9.0",
@@ -83,7 +82,7 @@
     "split": "^1.0.0",
     "stream-to-observable": "^0.2.0",
     "strip-ansi": "^3.0.1",
-    "svgo": "0.4.5",
+    "svgo": "^0.7.1",
     "time-grunt": "1.2.0",
     "uglify-js": "^2.7.4",
     "webpack": "^1.13.1",
