--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "lodash.capitalize": "^4.2.1",
     "lodash.flatten": "^4.4.0",
     "lodash.takewhile": "^4.6.0",
+    "lodash.uniq": "^4.5.0",
     "megalog": "^0.1.0",
     "mkdirp": "0.5.0",
     "moment": "2.8.3",
