--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react": "^3.5.0",
     "esprima": "1.2.2",
     "execa": "^0.5.0",
+    "figures": "^2.0.0",
     "glob": "^7",
     "grunt": "0.4.5",
     "grunt-asset-hash": "0.1.6",
