--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "amphtml-validator": "^1.0.10",
     "any-observable": "^0.2.0",
     "autoprefixer": "^6.3.7",
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
     "babel-plugin-transform-async-to-generator": "^6.16.0",
+    "babel-plugin-transform-es2015-modules-amd": "^6.18.0",
     "babel-preset-latest": "^6.16.0",
     "browser-sync": "^2.8.2",
     "btoa": "1.1.2",
