add ‘admin’ env to babel

--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,11 @@
             "plugins": [
                 "transform-async-to-generator"
             ]
+        },
+        "admin": {
+            "presets": [
+                "latest"
+            ]
         }
     }
 }
