--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "hyperscript-helpers": "^3.0.0",
     "immutable": "^3.8.1",
     "monapt": "^0.5.4",
-    "request": "^2.79.0",
+    "tcp-ping": "^0.1.1",
     "virtual-dom": "^2.1.1",
     "webshot": "^0.18.0"
   },
